# OpenNOW

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package.json
.github/: FUNDING.yml
.github/workflows/: auto-build.yml  codeql.yml  native-streamer-build.yml  release.yml  winget-publish.yml
docs/: development.md  integration-salsanow.md  streamer-investigation.md
ios/OpenNOWiOS/OpenNOWiOS.xcodeproj/: project.pbxproj
opennow-native-streamer/: CMakeLists.txt  Cargo.toml  README.md  go.mod  go.sum
opennow-native-streamer/cmd/opennow-native-streamer/: main.go
opennow-native-streamer/include/opennow/native/: app.hpp  input_bridge.hpp  input_protocol.hpp  ipc_client.hpp  macos_surface_renderer.hpp  media_pipeline.hpp  opus_rtp_depacketizer.hpp  platform_info.hpp  protocol.hpp  sdp_helpers.hpp  webrtc_session.hpp
opennow-native-streamer/internal/control/: service.go
opennow-native-streamer/internal/input/: encoder.go
opennow-native-streamer/internal/ipc/: client.go
opennow-native-streamer/internal/logging/: logging.go
opennow-native-streamer/internal/media/: player.go  player_gstreamer.go  player_stub.go
opennow-native-streamer/internal/platform/: probe.go
opennow-native-streamer/internal/webrtc/: client.go  sdp.go
opennow-native-streamer/pkg/protocol/: messages.go
opennow-native-streamer/src/: lib.rs  main.cpp  main.rs
opennow-native-streamer/src/app/: application.cpp
opennow-native-streamer/src/control/: mod.rs
opennow-native-streamer/src/input/: input_bridge.cpp  input_protocol.cpp  protocol.rs
opennow-native-streamer/src/ipc/: ipc_client.cpp  mod.rs  protocol.cpp
opennow-native-streamer/src/media/: media_pipeline.cpp  mod.rs
opennow-native-streamer/src/platform/: macos_surface_renderer.mm  macos_surface_renderer_stub.cpp  mod.rs  platform_info.cpp
opennow-native-streamer/src/session/: types.rs
opennow-native-streamer/src/webrtc/: opus_rtp_depacketizer.cpp  sdp.rs  sdp_helpers.cpp  webrtc_session.cpp
opennow-native-streamer/tests/: ipc_roundtrip.rs
opennow-stable/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
opennow-stable/android/: capacitor.settings.gradle
opennow-stable/scripts/: bundle-native-runtime.mjs  run-node-tests.mjs
opennow-streamer/: Cargo.toml
opennow-streamer/src/: main.rs  media.rs  sdp.rs  session.rs  window.rs
(+59 files in other folders)
